--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
 Конфигуратор[[:space:]]приложения.xlsx filter=lfs diff=lfs merge=lfs -text
+Конфигуратор[[:space:]]формулы[[:space:]]ранга.xlsx filter=lfs diff=lfs merge=lfs -text
