--- a/logger.yaml
+++ b/logger.yaml
@@ -4,7 +4,7 @@ formatters:
   brief:
     format: '%(message)s'
   precise:
-    format: '%(asctime)s %(levelname)s %(module)s:%(lineno)d %(message)s'
+    format: '%(asctime)s %(levelname)-8s %(module)s:%(lineno)d %(message)s'
 handlers:
   console:
     class: logging.StreamHandler
