--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 Конфигуратор[[:space:]]приложения.xlsx filter=lfs diff=lfs merge=lfs -text
 Конфигуратор[[:space:]]формулы[[:space:]]ранга.xlsx filter=lfs diff=lfs merge=lfs -text
+Положение[[:space:]]о[[:space:]]ранге.doc filter=lfs diff=lfs merge=lfs -text
