--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,42 @@
+attrs==18.2.0
 beautifulsoup4==4.10.0
+Brotli==1.0.9
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cssselect2==0.6.0
+cycler==0.11.0
 et-xmlfile==1.1.0
+fonttools==4.33.2
+html5lib==1.1
+idna==3.3
+Jinja2==3.1.1
+kiwisolver==1.4.2
 lxml==4.7.1
+MarkupSafe==2.1.1
+matplotlib==3.5.1
 numpy==1.22.0
 openpyxl==3.0.9
+packaging==21.3
 pandas==1.3.5
+pdfkit==1.0.0
+pdflatex==0.1.3
+Pillow==9.1.0
+pycparser==2.21
+pydyf==0.1.2
+pyparsing==3.0.8
+pyphen==0.12.0
 python-dateutil==2.8.2
 pytz==2021.3
 PyYAML==6.0
+requests==2.27.1
+scipy==1.8.0
+seaborn==0.11.2
 six==1.16.0
 soupsieve==2.3.1
+subp==0.1.1
+tinycss2==1.1.1
+urllib3==1.26.9
+weasyprint==54.3
+webencodings==0.5.1
+zopfli==0.2.1
